--- a/ukol-2/druha.html
+++ b/ukol-2/druha.html
@@ -8,17 +8,10 @@
   </head>
   <body>
     <div class="wrap">
-      <header>Nadpis - hlavní stránka</header>
-      <aside>
-        <ul>
-          <li>
-            <a href="index.html">hlavní</a>
-          </li>
-          <li>
-            <a href="druha.html">druhá</a>
-          </li>
-        </ul>
-      </aside>
+      <head>
+        nadpis
+      </head>
+      <aside>menu</aside>
       <main>hlavní obsah</main>
       <footer>patička</footer>
     </div>
